Add complete runtime files for robot_mc and robot_mujoco
- Added robot_mc/build/export/config/ (14 YAML config files)
- Added robot_mc/build/export/mc/bin/ (16 binaries and libraries)
- Added robot_mc/build/export/onnx_model_crypto/ (80 ONNX model files)
- Added robot_mc/build/export/mile_data.txt
- Added robot_mujoco/simulate/build/jszr_mujoco (executable)
- Updated .gitignore files to allow necessary runtime files
- Total: 111 files in robot_mc, 465 files in robot_mujoco

--- a/src/robot_mc/.gitignore
+++ b/src/robot_mc/.gitignore
@@ -8,3 +8,16 @@ cmake-build
 cmake-build-debug
 cmake-build-release
 .cache
+
+# Allow export directory (needed for runtime)
+!build/export/
+!build/export/config/
+!build/export/config/**/*.yaml
+!build/export/config/**/*.yml
+!build/export/config/**/*.json
+!build/export/mile_data.txt
+!build/export/mc/
+!build/export/mc/bin/
+!build/export/mc/bin/*
+!build/export/onnx_model_crypto/
+!build/export/onnx_model_crypto/**/*
