--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,3 @@
-# Git LFS 配置 - 跟踪大文件
-# 跟踪所有 .tar.gz 文件（发布包）
-*.tar.gz filter=lfs diff=lfs merge=lfs -text
-# 跟踪大文件类型
-*.pak filter=lfs diff=lfs merge=lfs -text
-*.ucas filter=lfs diff=lfs merge=lfs -text
-*.utoc filter=lfs diff=lfs merge=lfs -text
-# 二进制文件
-*.so filter=lfs diff=lfs merge=lfs -text
-*.bin filter=lfs diff=lfs merge=lfs -text
+# Git LFS 不再使用，大文件通过 GitHub Releases 分发
+# 所有大文件已在 .gitignore 中排除
 * !text !filter !merge !diff
