docs: 更新文档和脚本，完善 chunk packages 系统
- 更新 README.md 和 docs/README_CN.md，添加详细的脚本使用指南
- 更新 CHUNK_PACKAGES_GUIDE.md，添加脚本选择指南和文件管理说明
- 优化 install_chunks.sh：支持从 manifest 读取地图列表，保留下载文件到 releases/
- 优化 install_chunks_local.sh：支持分片文件合并，自动安装所有可用包
- 更新 split_large_file.sh：生成的合并脚本包含 SHA256 校验和验证
- 更新 upload_to_release.sh：改进上传逻辑，支持断点续传和进度显示
- 删除 commit_and_push.sh 和 .gitattributes（不再使用 Git LFS）
- 更新 .gitignore：忽略 releases/ 下的所有包文件（由脚本上传到 GitHub Releases）

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,14 @@
 
 # Release package files (upload to GitHub Releases instead of Git)
 # Assets are downloaded directly to releases/ directory
+# Developers use upload_to_release.sh to upload these files
 releases/*.tar.gz
+releases/*.tar
 releases/*.json
+releases/*.merge.sh
+releases/*.part*
+releases/*.sha256
+releases/*.bak
 releases/chunks/
 !releases/.gitkeep
 
